<resources>
    <string name="app_name" translatable="false">E-Learning</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="edraak">Edraak</string>

    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string-array name="UserType">
        <item>Instructor</item>
        <item>Student</item>
    </string-array>

    <string name="course_name">Course Name</string>
    <string name="quiz_grade">Quiz Grade</string>
    <string name="project_grade">Project Grade</string>
    <string name="attendance_grade">Attendance Grade</string>
    <string name="create_a_new_course">Create A New Course</string>

    <string name="instructor_control_panel">Instructor Control Panel</string>
    <string name="generate_attendance_code">Generate Attendance Code</string>
    <string name="create_new_quiz">Create New Quiz</string>
    <string name="upload_material">Upload Material</string>
    <string name="show_grades">Show Grades</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>