<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_White"
    tools:context=".Ui.Fragment.Authentication.Registration.RegistrationFragment">

    <EditText
        android:id="@+id/registreation_FullName_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:gravity="start"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registreation_Age_ET"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:digits="0123456789"
        android:gravity="start"
        android:hint="@string/age"
        android:inputType="phone"
        android:maxLength="3"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/registreation_FullName_ET"
        app:layout_constraintTop_toBottomOf="@+id/registreation_FullName_ET" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:entries="@array/UserType"
        android:paddingVertical="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="@+id/registreation_Age_ET"
        app:layout_constraintStart_toEndOf="@+id/registreation_Age_ET"
        app:layout_constraintTop_toTopOf="@+id/registreation_Age_ET" />

    <EditText
        android:id="@+id/registreation_PhoneNumber_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:digits="0123456789"
        android:gravity="start"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/registreation_FullName_ET"
        app:layout_constraintStart_toStartOf="@+id/registreation_FullName_ET"
        app:layout_constraintTop_toBottomOf="@id/registreation_Age_ET" />

    <EditText
        android:id="@+id/registreation_Email_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:gravity="start"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/registreation_FullName_ET"
        app:layout_constraintStart_toStartOf="@+id/registreation_FullName_ET"
        app:layout_constraintTop_toBottomOf="@+id/registreation_PhoneNumber_ET" />

    <EditText
        android:id="@+id/registreation_Password_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/registreation_FullName_ET"
        app:layout_constraintStart_toStartOf="@+id/registreation_FullName_ET"
        app:layout_constraintTop_toBottomOf="@+id/registreation_Email_ET" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registreation_Signup_BTN"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:backgroundTint="@color/profile_board"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/sign_up"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/registreation_Password_ET"
        app:layout_constraintStart_toStartOf="@+id/registreation_Password_ET"
        app:layout_constraintTop_toBottomOf="@+id/registreation_Password_ET" />

    <TextView
        android:id="@+id/registreation_dontHaveAccount_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="Have an account? "
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registreation_Signup_BTN" />

    <TextView
        android:id="@+id/registreation_LoginNavigate_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textColor="@color/profile_board"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/registreation_dontHaveAccount_TV"
        app:layout_constraintStart_toEndOf="@+id/registreation_dontHaveAccount_TV"
        app:layout_constraintTop_toTopOf="@+id/registreation_dontHaveAccount_TV" />

</androidx.constraintlayout.widget.ConstraintLayout>