<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Fragment.Instructor.Control.ControlFragment">

    <View
        android:id="@+id/guideline2"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ui_Course_Control_IV"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/undraw_course_control"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/instructor_control_panel"
        android:textColor="@color/dark_gunmetal"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ui_Course_Control_IV"
        app:layout_constraintEnd_toStartOf="@+id/ui_Course_Control_IV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/first_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:src="@drawable/undraw_attendance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/generate_attendance_code"
                android:textStyle="bold"
                android:textColor="@color/dark_gunmetal"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/seconde_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/first_CardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/first_CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:src="@drawable/undraw_add_quiz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/create_new_quiz"
                android:textStyle="bold"
                android:textColor="@color/dark_gunmetal"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/third_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="@dimen/_130sdp"
                android:src="@drawable/undraw_add_material"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/upload_material"
                android:textStyle="bold"
                android:textColor="@color/dark_gunmetal"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fourth_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_marginEnd="16dp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/third_CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="@dimen/_130sdp"
                android:src="@drawable/undraw_grades"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/show_grades"
                android:textStyle="bold"
                android:textColor="@color/dark_gunmetal"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/Current_courseId_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        tools:text="OEShP7uXOOTEpSraw7QVEECsUNk2"
        android:background="@drawable/input_frame"
        android:backgroundTint="@color/cultured"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/dark_charcoal"/>

    <ImageView
        android:id="@+id/inst_Chat"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/undraw_chat"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/Current_courseId_TV"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>